[package]
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
description = "SPL Associated Token Account Program Tests"
edition = "2021"
license = "Apache-2.0"
name = "spl-associated-token-account-test"
repository = "https://github.com/solana-labs/solana-program-library"
version = "0.0.1"

[features]
test-sbf = []

[dev-dependencies]
solana-program = { git = "https://github.com/Inon123/solana.git", branch = "chore/update_dependencies"}
solana-program-test = { git = "https://github.com/Inon123/solana.git", branch = "chore/update_dependencies"}
solana-sdk = { git = "https://github.com/Inon123/solana.git", branch = "chore/update_dependencies"}
spl-associated-token-account = { version = "2", path = "../program", features = ["no-entrypoint"] }
spl-token = { version = "4.0.1", path = "../../token/program", features = ["no-entrypoint"] }
spl-token-2022 = { version = "2.0", path = "../../token/program-2022", features = ["no-entrypoint"] }
