[package]
name = "binary-option"
version = "0.1.0"
edition = "2021"
license = "WTFPL"

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
solana-program = { git = "https://github.com/Inon123/solana.git", rev ="abb7d30fe97103c71958fa5a8378dc3ab93c0996"}
thiserror = "1.0"
spl-token = { version = "4.0.1", path = "../../token/program", features = [
  "no-entrypoint",
] }
arrayref = "0.3.7"
borsh = "1.2.1"
uint = "0.9"

[lib]
crate-type = ["cdylib", "lib"]
