[package]
name = "spl-governance-test-sdk"
version = "0.1.4"
description = "Solana Program Library Governance Program Test SDK"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2021"

[dependencies]
arrayref = "0.3.7"
bincode = "1.3.2"
borsh = "1.2.1"
lazy_static = "1.4.0"
num-derive = "0.4"
num-traits = "0.2"
serde = "1.0.197"
serde_derive = "1.0.103"
solana-program = { git = "https://github.com/Inon123/solana.git", branch = "chore/update_dependencies"}
solana-program-test = { git = "https://github.com/Inon123/solana.git", branch = "chore/update_dependencies"}
solana-sdk = { git = "https://github.com/Inon123/solana.git", branch = "chore/update_dependencies"}
spl-token = { version = "4.0.1", path = "../../token/program", features = [
  "no-entrypoint",
] }
thiserror = "1.0"
