[package]
name = "spl-governance-tools"
version = "0.1.4"
description = "Solana Program Library Governance Tools"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2021"

[dependencies]
arrayref = "0.3.7"
bincode = "1.3.2"
borsh = "1.2.1"
num-derive = "0.4"
num-traits = "0.2"
serde = "1.0.197"
serde_derive = "1.0.103"
solana-program = { git = "https://github.com/Inon123/solana.git", rev ="abb7d30fe97103c71958fa5a8378dc3ab93c0996"}
spl-token = { version = "4.0.1", path = "../../token/program", features = [
  "no-entrypoint",
] }
thiserror = "1.0"
