[package]
name = "spl-instruction-padding"
version = "0.1.1"
description = "Solana Program Library Instruction Padding Program"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2021"

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
num_enum = "0.7.2"
solana-program = { git = "https://github.com/Inon123/solana.git", branch = "chore/update_dependencies"}

[dev-dependencies]
solana-program-test = { git = "https://github.com/Inon123/solana.git", branch = "chore/update_dependencies"}
solana-sdk = { git = "https://github.com/Inon123/solana.git", branch = "chore/update_dependencies"}

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
