[package]
name = "spl-pod"
version = "0.1.1"
description = "Solana Program Library Plain Old Data (Pod)"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2021"

[features]
serde-traits = ["dep:serde", "dep:base64"]
borsh = ["dep:borsh"]

[dependencies]
base64 = { version = "0.21.7", optional = true }
borsh = { version = "1.2.1", optional = true }
bytemuck = { version = "1.14.3" }
serde = { version = "1.0.197", optional = true }
solana-program = { git = "https://github.com/Inon123/solana.git", branch = "chore/update_dependencies"}
solana-zk-token-sdk = { git = "https://github.com/Inon123/solana.git", branch = "chore/update_dependencies"}
spl-program-error = { version = "0.3", path = "../program-error" }

[dev-dependencies]
serde_json = "1.0.114"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
