[package]
name = "spl-name-service"
description = "Solana Program Library Name Service"
version = "0.3.0"
repository = "https://github.com/solana-labs/solana-program-library"
authors = [
  "lcchy <lucas@bonfida.com>",
  "Solana Labs Maintainers <maintainers@solanalabs.com>",
]
license = "Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
solana-program = { git = "https://github.com/Inon123/solana.git", rev ="abb7d30fe97103c71958fa5a8378dc3ab93c0996"}
num-traits = "0.2"
borsh = "1.2.1"
num-derive = "0.4.2"
thiserror = "1.0.57"

[dev-dependencies]
solana-program-test = { git = "https://github.com/Inon123/solana.git", rev ="abb7d30fe97103c71958fa5a8378dc3ab93c0996"}
solana-sdk = { git = "https://github.com/Inon123/solana.git", rev ="abb7d30fe97103c71958fa5a8378dc3ab93c0996"}

[lib]
crate-type = ["cdylib", "lib"]
