[package]
name = "spl-record"
version = "0.2.0"
description = "Solana Program Library Record Program"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2021"

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
bytemuck = { version = "1.14.3", features = ["derive"] }
num-derive = "0.4"
num-traits = "0.2"
solana-program = { git = "https://github.com/Inon123/solana.git", branch = "chore/update_dependencies"}
thiserror = "1.0"
spl-pod = { version = "0.1", path = "../../libraries/pod" }

[dev-dependencies]
solana-program-test = { git = "https://github.com/Inon123/solana.git", branch = "chore/update_dependencies"}
solana-sdk = { git = "https://github.com/Inon123/solana.git", branch = "chore/update_dependencies"}

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
