[package]
name = "spl-single-pool-cli"
version = "1.0.0"
description = "Solana Program Library Single-Validator Stake Pool Command-line Utility"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2021"

[dependencies]
tokio = "1.36"
clap = { version = "3.2.23", features = ["derive"] }
console = "0.15.8"
borsh = "1.2.1"
bincode = "1.3.1"
serde = "1.0.197"
serde_derive = "1.0.103"
serde_json = "1.0.114"
serde_with = "3.6.1"
solana-account-decoder = { git = "https://github.com/Inon123/solana.git", branch = "chore/update_dependencies"}
solana-clap-v3-utils = { git = "https://github.com/Inon123/solana.git", branch = "chore/update_dependencies"}
solana-cli-config = { git = "https://github.com/Inon123/solana.git", branch = "chore/update_dependencies"}
solana-cli-output = { git = "https://github.com/Inon123/solana.git", branch = "chore/update_dependencies"}
solana-client = { git = "https://github.com/Inon123/solana.git", branch = "chore/update_dependencies"}
solana-logger = { git = "https://github.com/Inon123/solana.git", branch = "chore/update_dependencies"}
solana-remote-wallet = { git = "https://github.com/Inon123/solana.git", branch = "chore/update_dependencies"}
solana-sdk = { git = "https://github.com/Inon123/solana.git", branch = "chore/update_dependencies"}
solana-transaction-status = { git = "https://github.com/Inon123/solana.git", branch = "chore/update_dependencies"}
solana-vote-program = { git = "https://github.com/Inon123/solana.git", branch = "chore/update_dependencies"}
spl-token = { version = "4.0.1", path = "../../token/program", features = [
  "no-entrypoint",
] }
spl-token-client = { version = "0.8", path = "../../token/client" }
spl-associated-token-account = { version = "2.0", path = "../../associated-token-account/program", features = [
  "no-entrypoint",
] }
spl-single-pool = { version = "1.0.0", path = "../program", features = [
  "no-entrypoint",
] }

[dev-dependencies]
solana-test-validator = { git = "https://github.com/Inon123/solana.git", branch = "chore/update_dependencies"}
serial_test = "3.0.0"
test-case = "3.3"
tempfile = "3.10.1"

[[bin]]
name = "spl-single-pool"
path = "src/main.rs"
