[package]
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
description = "SPL-Stake-Pool Command-line Utility"
edition = "2021"
homepage = "https://spl.solana.com/stake-pool"
license = "Apache-2.0"
name = "spl-stake-pool-cli"
repository = "https://github.com/solana-labs/solana-program-library"
version = "1.0.0"

[dependencies]
borsh = "1.2.1"
clap = "2.33.3"
serde = "1.0.197"
serde_derive = "1.0.130"
serde_json = "1.0.114"
solana-account-decoder = { git = "https://github.com/Inon123/solana.git", branch = "chore/update_dependencies"}
solana-clap-utils = { git = "https://github.com/Inon123/solana.git", branch = "chore/update_dependencies"}
solana-cli-config = { git = "https://github.com/Inon123/solana.git", branch = "chore/update_dependencies"}
solana-cli-output = { git = "https://github.com/Inon123/solana.git", branch = "chore/update_dependencies"}
solana-client = { git = "https://github.com/Inon123/solana.git", branch = "chore/update_dependencies"}
solana-logger = { git = "https://github.com/Inon123/solana.git", branch = "chore/update_dependencies"}
solana-program = { git = "https://github.com/Inon123/solana.git", branch = "chore/update_dependencies"}
solana-remote-wallet = { git = "https://github.com/Inon123/solana.git", branch = "chore/update_dependencies"}
solana-sdk = { git = "https://github.com/Inon123/solana.git", branch = "chore/update_dependencies"}
spl-associated-token-account = { version = "=2.3", path = "../../associated-token-account/program", features = [
  "no-entrypoint",
] }
spl-stake-pool = { version = "=1.0.0", path = "../program", features = [
  "no-entrypoint",
] }
spl-token = { version = "=4.0", path = "../../token/program", features = [
  "no-entrypoint",
] }
bs58 = "0.4.0"
bincode = "1.3.1"

[[bin]]
name = "spl-stake-pool"
path = "src/main.rs"
