[package]
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
description = "SPL Token Lending CLI"
edition = "2021"
homepage = "https://spl.solana.com/token-lending"
license = "Apache-2.0"
name = "spl-token-lending-cli"
repository = "https://github.com/solana-labs/solana-program-library"
version = "0.2.0"

[dependencies]
clap = "2.33.3"
solana-clap-utils = { git = "https://github.com/Inon123/solana.git", branch = "chore/update_dependencies"}
solana-cli-config = { git = "https://github.com/Inon123/solana.git", branch = "chore/update_dependencies"}
solana-client = { git = "https://github.com/Inon123/solana.git", branch = "chore/update_dependencies"}
solana-logger = { git = "https://github.com/Inon123/solana.git", branch = "chore/update_dependencies"}
solana-sdk = { git = "https://github.com/Inon123/solana.git", branch = "chore/update_dependencies"}
solana-program = { git = "https://github.com/Inon123/solana.git", branch = "chore/update_dependencies"}
spl-token-lending = { version = "0.2", path="../program", features = [ "no-entrypoint" ] }
spl-token = { version = "4.0.1", path="../../token/program", features = [ "no-entrypoint" ]  }

[[bin]]
name = "spl-token-lending"
path = "src/main.rs"
