[package]
name = "flash_loan_receiver"
version = "1.0.0"
edition = "2021"

[dependencies]
arrayref = "0.3.7"
solana-program = { git = "https://github.com/Inon123/solana.git", rev ="abb7d30fe97103c71958fa5a8378dc3ab93c0996"}
spl-token = { version = "4.0.1", path = "../../token/program", features=["no-entrypoint"] }

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
