[package]
name = "spl-token-lending"
version = "0.2.0"
description = "Solana Program Library Token Lending"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2021"

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
arrayref = "0.3.7"
bytemuck = "1.14.3"
num-derive = "0.4"
num-traits = "0.2"
solana-program = { git = "https://github.com/Inon123/solana.git", branch = "chore/update_dependencies"}
spl-token = { version = "4.0.1", path = "../../token/program", features = [ "no-entrypoint" ] }
thiserror = "1.0"
uint = "0.9"

[dev-dependencies]
assert_matches = "1.5.0"
proptest = "1.4"
solana-program-test = { git = "https://github.com/Inon123/solana.git", branch = "chore/update_dependencies"}
solana-sdk = { git = "https://github.com/Inon123/solana.git", branch = "chore/update_dependencies"}

[lib]
crate-type = ["cdylib", "lib"]
