[package]
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
description = "SPL-Token Command-line Utility"
edition = "2021"
homepage = "https://spl.solana.com/token"
license = "Apache-2.0"
name = "spl-token-cli"
repository = "https://github.com/solana-labs/solana-program-library"
version = "3.3.0"

[build-dependencies]
walkdir = "2"

[dependencies]
base64 = "0.21.7"
clap = "2.33.3"
console = "0.15.8"
futures = "0.3"
serde = "1.0.197"
serde_derive = "1.0.103"
serde_json = "1.0.114"
solana-account-decoder = { git = "https://github.com/Inon123/solana.git", rev ="abb7d30fe97103c71958fa5a8378dc3ab93c0996"}
solana-clap-utils = { git = "https://github.com/Inon123/solana.git", rev ="abb7d30fe97103c71958fa5a8378dc3ab93c0996"}
solana-cli-config = { git = "https://github.com/Inon123/solana.git", rev ="abb7d30fe97103c71958fa5a8378dc3ab93c0996"}
solana-cli-output = { git = "https://github.com/Inon123/solana.git", rev ="abb7d30fe97103c71958fa5a8378dc3ab93c0996"}
solana-client = { git = "https://github.com/Inon123/solana.git", rev ="abb7d30fe97103c71958fa5a8378dc3ab93c0996"}
solana-logger = { git = "https://github.com/Inon123/solana.git", rev ="abb7d30fe97103c71958fa5a8378dc3ab93c0996"}
solana-remote-wallet = { git = "https://github.com/Inon123/solana.git", rev ="abb7d30fe97103c71958fa5a8378dc3ab93c0996"}
solana-sdk = { git = "https://github.com/Inon123/solana.git", rev ="abb7d30fe97103c71958fa5a8378dc3ab93c0996"}
solana-transaction-status = { git = "https://github.com/Inon123/solana.git", rev ="abb7d30fe97103c71958fa5a8378dc3ab93c0996"}
spl-token = { version = "4.0.1", path = "../program", features = [
  "no-entrypoint",
] }
spl-token-2022 = { version = "2.0", path = "../program-2022", features = [
  "no-entrypoint",
] }
spl-token-client = { version = "0.8", path = "../client" }
spl-token-metadata-interface = { version = "0.2", path = "../../token-metadata/interface" }
spl-token-group-interface = { version = "0.1", path = "../../token-group/interface" }
spl-associated-token-account = { version = "2.0", path = "../../associated-token-account/program", features = [
  "no-entrypoint",
] }
spl-memo = { version = "4.0.1", path = "../../memo/program", features = [
  "no-entrypoint",
] }
strum = "0.26"
strum_macros = "0.26"
tokio = "1.36"

[dev-dependencies]
solana-test-validator = { git = "https://github.com/Inon123/solana.git", rev ="abb7d30fe97103c71958fa5a8378dc3ab93c0996"}
assert_cmd = "2.0.14"
libtest-mimic = "0.7"
serial_test = "3.0.0"
tempfile = "3.10.1"

[[bin]]
name = "spl-token"
path = "src/main.rs"

[[test]]
name = "command"
path = "tests/command.rs"
harness = false
