[package]
name = "test-client"
version = "0.1.0"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
publish = false
edition = "2021"

# Used to ensure that SPL programs are buildable by external clients

[dependencies]
solana-sdk = { git = "https://github.com/Inon123/solana.git", rev ="abb7d30fe97103c71958fa5a8378dc3ab93c0996"}
spl-memo = { path = "../../memo/program", features = [ "no-entrypoint" ] }
spl-token = { path = "../../token/program", features = [ "no-entrypoint" ] }
spl-token-swap = { path = "../../token-swap/program", features = [ "no-entrypoint" ] }
